<resources>
    <string name="app_name">پرسشنامه روانشناسی</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="next">بعدی</string>
    <string name="end">پایان</string>
    <string name="notChoiseError">لطفا به سوال پاسخ دهید</string>
    <string name="send_result">ارسال نتیجه</string>
    <string name="FLName">نام و نام خانوادگی</string>
    <string name="education">تحصیلات</string>
    <string name="sex">جنسیت</string>
    <string name="age">سن</string>
    <string name="explain">در پرسشنامه جملاتی آمده که افراد ممکن است برای توصیف خود از انها استفاده کنند . لطفا هر جمله را بخوانید و سپس بر اساس اینکه چه توصیف دقیقی از شما در یک سال گذشته ارایه می دهدبه انها نمره بدهید  چنانچه از پاسخ خود اطمینان ندارید بر اساس احساس هیجانی خود پاسخ دهید نه بر اساس انچه که فکر می کنید درست است. \n
    بعضی جملات در مورد رابطه شما با والدین یا شریک عاطفی است چنانچه هر کدام از این افراد فوت کرده اند لطفا با توجه به رابطه خود با آنان در زمان زنده بودنشان پاسخ دهید . همچنین اگر در حال حاضر در یک رابطه عاطفی نیستید اما روابط عاطفی متعددی در گذشته داشته اید لطفا بر اساس برجسته ترین رابطه عاطفی اخیربه این موارد پاسخ دهید. \n
     بالاترین نمره از یک تا شش که بهترین توصیف را از شما ارایه می دهد انتخاب کنید \n
        مقیاس نمره گذاری : \n
    ۱ - کاملا در مورد من غلط است \n
    ۲ - اغلب در مورد من غلط است \n
    ۳ - اندکی درست تر است تا غلط \n
    ۴ - تا حدودی در مورد من درست است \n
    ۵ - اغلب در مورد من درست است \n
    ۶ - کاملا من را توصیف میکند </string>
    <string name="title_end">پرسشنامه با موفقیت کامل شد. برای ارسال نتایج لطفا فرم زیر را پر نموده سپس ارسال نتیجه را بزنید</string>
    <string name="start">شروع پرسشنامه</string>
    <string name="man">مرد</string>
    <string name="Woman">زن</string>

</resources>